Fixed button appearance, added 'collapse' feature to measure.html: the results pane only appears when there's content in one or both passage comparison fields. It also collapses everything except the levenshtein result under an Advanced button.

--- a/resources/sass/_typography.scss
+++ b/resources/sass/_typography.scss
@@ -68,6 +68,8 @@ h5 {
 
 h2 {
   font-size: 34px;
+  margin-top: 1.5em;
+  margin-bottom: 1em;
 }
 
 h3 {
